# regolith-control-center

./: .gitignore  NEWS  PORTING.md  README.md  gnome-control-center.doap  meson.build  meson_options.txt  regolith-control-center.doap
.github/workflows/: pkg-change-broadcast.yml
build-aux/flatpak/: org.gnome.Settings.json
data/icons/: meson.build
debian/: changelog  control  control.in  copyright  gbp.conf  gnome-control-center-data.install  not-installed  regolith-control-center-data.install  regolith-control-center-data.links  regolith-control-center.install  regolith-control-center.pkla  rules  source_regolith-control-center.py
debian/patches/: 0001-Expose-touchpad-settings-if-synaptics-is-in-use.patch  0001-display-Try-harder-to-select-a-good-and-working-scal.patch  0004-Display-locale-modifiers-properly.patch  0005-Adapts-the-region-capplet-and-the-language-chooser-i.patch  0007-sound-Allow-volume-to-be-set-above-100.patch  0008-Allow-tweaking-some-settings-for-Ubuntu-Dock.patch  0014-shell-Change-the-default-height-so-all-category-are-.patch  0015-connectivity-add-network-connectivity-checking-toggl.patch  0016-diagnostics-Add-Whoopsie-support.patch  0017-online-accounts-Hide-window-after-adding-an-online-a.patch  0019-display-Support-UI-scaled-logical-monitor-mode.patch  0020-Disable-non-working-camera-microphones-panels.patch  0025-applications-Hide-buttons-that-launch-gnome-software.patch  0026-applications-Launch-snap-store-if-it-is-installed.patch  0029-applications-Use-new-snapd-glib-API-for-labelling-Sn.patch  0030-temporarily-revert-alt-char-key.patch  71_ubuntu_dock_settings.patch  distro-logo.patch  (+45 more)
docs/: CONTRIBUTING.md  MAINTAINERS.md
man/: regolith-control-center.xml
panels/: meson.build
panels/system/about/: cc-system-details-window.c  meson.build
panels/ubuntu/: cc-ubuntu-colors-row.c  cc-ubuntu-colors-row.css  cc-ubuntu-colors-row.h  cc-ubuntu-colors-row.ui  cc-ubuntu-dock-dialog.c  cc-ubuntu-dock-dialog.h  cc-ubuntu-dock-dialog.ui  cc-ubuntu-panel.c  cc-ubuntu-panel.h  cc-ubuntu-panel.ui  gnome-ubuntu-panel.desktop.in  meson.build  regolith-ubuntu-panel.desktop.in  ubuntu.gresource.xml
panels/ubuntu/assets/colors/: color.svg.in
po/: POTFILES.in  ab.po  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  ckb.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  (+67 more)
search-provider/: cc-search-provider.c  control-center-search-provider.c  meson.build  org.gnome.ControlCenter.SearchProvider.service.in  regolith-control-center-search-provider.ini
shell/: cc-application.c  cc-panel-list.c  cc-panel-loader.c  cc-shell-model.c  cc-window.c  gnome-control-center.desktop.in.in  meson.build  org.gnome.ControlCenter.gschema.xml  org.gnome.ControlCenter.service.in  org.gnome.Settings.gschema.xml  org.regolith.ControlCenter.gschema.xml  org.regolith.Settings.desktop.in  org.regolith.Settings.desktop.in.in  org.regolith.Settings.gschema.xml  org.regolith.Settings.service.in  regolith-control-center.desktop.in.in  regolith-control-center.gresource.xml
(+240 files in other folders)
